tests/baselines/reference/primitiveTypeAsClassName.errors.txt
==== tests/cases/compiler/primitiveTypeAsClassName.ts (1 errors) ====
    class any {}
          ~~~
!!! primitiveTypeAsClassName.ts(1,7): error TS1057: Class name cannot be 'any'.